order filters + bug fixed