@@ -5,7 +5,6 @@ import org.apache.tika.Tika;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 
 
@@ -15,8 +14,7 @@ public class MediaTypeUtils {
     private final static Tika tika = new Tika();
 
     @Getter
-    private final static List<String> allowedImages = Collections.unmodifiableList(
-            List.of("image/jpeg", "image/png", "image/bmp"));
+    private final static List<String> allowedImages = List.of("image/jpeg", "image/png", "image/bmp");
 
     public static boolean isImageOK(MultipartFile file) throws IOException {
         return allowedImages.contains(tika.detect(file.getBytes()));
